--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 <body>
-    <header></header>
+    <header><h1>Titulo</h1></header>
     <main></main>
     <footer></footer>
     
