--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <main></main>
-    <footer></footer>
+    <footer><h3>Contactos</h3></footer>
     
 </body>
 </html>
